# TcpClient

./: CMakeLists.txt  main.cpp
UI/book/: book.cpp  book.h  book.ui
UI/friend/: friend.cpp  friend.h  friend.ui
UI/login/: tcpclient.cpp  tcpclient.h  tcpclient.ui  ui_tcpclient.h
UI/online/: Online.cpp  Online.h  Online.ui  online.cpp  online.h  online.ui  ui_Online.h
UI/ope/: OpeWidget.cpp  OpeWidget.h  OpeWidget.ui  ui_OpeWidget.h
UI/privatechat/: privatechat.cpp  privatechat.h  privatechat.ui  ui_privatechat.h
UI/share/: sharefile.cpp  sharefile.h
func/: portocol.h  protocol.cpp  protocol.h
resource/: config.qrc
